--- a/gateway-service/src/main/resources/application.yaml
+++ b/gateway-service/src/main/resources/application.yaml
@@ -26,9 +26,13 @@ spring:
           uri: lb://sueldo-microservice
           predicates:
             - Path=/sueldo/*
+        - id: reporte-microservice
+          uri: lb://reporte-microservice
+          predicates:
+            - Path=/reporte/*
 eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
+      defaultZone: ${EUREKA_URL:http://eureka-microservice:8761/eureka/}
