--- a/gateway-service/src/main/resources/bootstrap.yaml
+++ b/gateway-service/src/main/resources/bootstrap.yaml
@@ -1,4 +1,7 @@
 spring:
+  main:
+    web-application-type: reactive
+    allow-bean-definition-overriding: true
   application:
     name: gateway-microservice
   cloud:
